name:                keeper

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +------- breaking API changes
--                   | +----- non-breaking API additions
--                   | | +--- code changes with no API change
version:             0.1.0
synopsis: SSH key manager in Haskell
--A longer description of the package.
description:
  Keeper is an SSH key manager for Open SSH.
  .
  It provides a binary and an API to store and manage SSH Keys for OpenSSH
  servers.
homepage:            https://github.com/NicolasDP/keeper
license:             BSD3
license-file:        LICENSE
author:              Nicolas DI PRIMA
maintainer:          nicolas@di-prima.fr
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Keeper
                     , System.Keeper.Types
                     , System.Keeper.Class
                     , System.Keeper.Backend.Dummy
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.6 && <4.7
                     , unix
                     , byteable
                     , bytestring
                     , text
                     , split
                     , aeson

  -- Base language which the package is written in.
  default-language:    Haskell2010

Executable           check_authorizedkeys
  Main-Is:           CheckAuthorizedKeys.hs
  hs-source-dirs:    Keeper
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  Build-depends:   base >= 4 && < 5
                 , bytestring
                 , system-filepath
                 , unix
                 , transformers
                 , keeper
  default-language:    Haskell2010
